Fix alert font size on small screen

--- a/css/cover.css
+++ b/css/cover.css
@@ -33,7 +33,7 @@ body {
         font-size: 24px;
     }
 
-    .lead, .alert {
+    .lead {
         font-size: 12px;
     }
 
